--- a/persistence.yaml
+++ b/persistence.yaml
@@ -1,4 +1,15 @@
 apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mongo-data
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
+apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: mongo-data-pv
@@ -9,3 +20,4 @@ spec:
     storage: 1Gi
   hostPath:
     path: /data/mongo
+
